--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-icons": "^5.3.0",
     "react-image-crop": "^11.0.7",
     "react-toastify": "^10.0.6",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.3",
