--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.0",
-    "firebase": "^11.0.1",
     "joi": "^17.13.3",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "next-auth": "^4.24.8",
+    "next-cloudinary": "^6.16.0",
     "prisma": "^5.21.1",
     "react": "^18",
     "react-dom": "^18",
